k8s/base/authservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
  labels:
    app: authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
      - name: authservice
        image: authservice:latest
        ports:
        - containerPort: 8084
        livenessProbe:
          httpGet:
            path: /finance/actuator/health/liveness
            port: 8084
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /finance/actuator/health/readiness
            port: 8084
          initialDelaySeconds: 30
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: authservice
spec:
  selector:
    app: authservice
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
