k8s/base/processingservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processingservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: processingservice
  template:
    metadata:
      labels:
        app: processingservice
    spec:
      serviceAccountName: spring-cloud-kubernetes
      containers:
      - name: processingservice
        image: processingservice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8082
        livenessProbe:
          httpGet:
            path: /finance/actuator/health/liveness
            port: 8082
          initialDelaySeconds: 60
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /finance/actuator/health/readiness
            port: 8082
          initialDelaySeconds: 45
          periodSeconds: 10
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: processingservice
spec:
  selector:
    app: processingservice
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
